Fix spacing issues

--- a/assets/stylesheets/rooms.scss
+++ b/assets/stylesheets/rooms.scss
@@ -136,7 +136,6 @@
             width: 75px;
             text-align: center;
             color: $answers_dark_grey;
-            margin-right: 40px;
             padding: 5px 10px;
 
             .answer-total {
